# poetry2nix-test

./: Dockerfile  default.nix  flake.nix  justfile  pyproject.toml  release.nix  result  shell.nix  some.py
nix/: sources.json
