[tool.poetry]
name = "poetry2nix-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

packages = [{ include = "some.py" }]

# include = ["pyproject.toml", "poetry.lock"]

[tool.poetry.dependencies]
python = "^3.11"
#torch = "2.2.2"
#sphinxcontrib_jquery = "4.1"
# error: store path 'ds7zx3q1ac6fx77kgcfszhgq18058r4b-torch-2.2.0%2Bcpu-cp311-cp311-linux_x86_64.whl' contains illegal character '%'
#torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.2.0%2Bcpu-cp311-cp311-linux_x86_64.whl" }
numpy = "*"
# bcrypt = "*"

[tool.poetry.scripts]
some = "some:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
